--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="header-nav">
                 <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="./index.html">Studio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                 </ul>
@@ -52,22 +52,42 @@
             <div class="container benefits-container">
                 <h2 class="visually-hidden">Our benefits</h2>
                 <ul class="benefits-list">
-                <li class="benefits-item">
-                    <h3 class="benefits-title">Strategy</h3>
-                    <p class="benefits-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-title">Punctuality</h3>
-                    <p class="benefits-text"> Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-title">Diligence</h3>
-                    <p class="benefits-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-title">Technologies</h3>
-                    <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li> 
+                    <li class="benefits-item">
+                        <div class="benefits-icon-box">
+                            <svg class="benefits-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-strategy"></use>
+                            </svg>
+                        </div>
+                        <h3 class="benefits-title">Strategy</h3>
+                        <p class="benefits-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <div class="benefits-icon-box">
+                            <svg class="benefits-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-punctuality"></use>
+                            </svg>
+                        </div>
+                        <h3 class="benefits-title">Punctuality</h3>
+                        <p class="benefits-text"> Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <div class="benefits-icon-box">
+                            <svg class="benefits-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diligence"></use>
+                            </svg>
+                        </div>
+                        <h3 class="benefits-title">Diligence</h3>
+                        <p class="benefits-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="benefits-item">
+                        <div class="benefits-icon-box">
+                            <svg class="benefits-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-technologies"></use>
+                            </svg>
+                        </div>
+                        <h3 class="benefits-title">Technologies</h3>
+                        <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li> 
                 </ul>
             </div>
         </section>
@@ -81,6 +101,36 @@
                         <div class="team-wrapper">
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-role">Product Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Instagram">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Twitter">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Facebook">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="LinkedIn">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -88,6 +138,36 @@
                         <div class="team-wrapper">
                             <h3 class="team-name">Tom Ford</h3>
                             <p class="team-role">Frontend Developer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Instagram">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Twitter">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Facebook">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="LinkedIn">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -95,6 +175,36 @@
                         <div class="team-wrapper">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-role">Marketing</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Instagram">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Twitter">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Facebook">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="LinkedIn">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -102,6 +212,36 @@
                         <div class="team-wrapper">
                             <h3 class="team-name">Daniel Wilson</h3>
                             <p class="team-role">UI Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Instagram">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Twitter">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="Facebook">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="" aria-label="LinkedIn">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -112,12 +252,20 @@
             <div class="container portfolio-container">
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
-                    <li class="portfolio-item"> 
-                        <img src="./images/banking-app.jpg" alt="Screenshot of Project 1" width="360" height="300">
-                        <div class="portfolio-wrapper">
-                            <h3 class="portfolio-title">Banking App</h3>
-                            <p class="portfolio-category">App</p>
-                        </div>
+                    <li class="portfolio-item">
+                        <a class="portfolio-link" href="">
+                            <div class="portfolio-thumb">
+                                <img src="./images/banking-app.jpg" alt="Screenshot of Project 1" width="360" height="300">
+                                <p class="portfolio-overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App · Cloud Storage App
+                                </p>
+                            </div> 
+                            <div class="portfolio-wrapper">
+                                <h3 class="portfolio-title">Banking App</h3>
+                                <p class="portfolio-category">App</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/cashless-payment.jpg" alt="Screenshot of Project 2" width="360" height="300">
@@ -160,11 +308,47 @@
     </main>
     <!-- PAGE FOOTER -->
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+        <div class="container footer-container">
+            <div class="footer-info">
+                <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-title">Social media</p>
+
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="" aria-label="Instagram">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="" aria-label="Twitter">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="" aria-label="Facebook">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="" aria-label="LinkedIn">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>  
 </body>
